--- a/src/main/resources/META-INF/resources/scss/bootstrap-ubo.scss
+++ b/src/main/resources/META-INF/resources/scss/bootstrap-ubo.scss
@@ -1,6 +1,6 @@
 // override bootstrap sass variables specified here:
 // http://getbootstrap.com/customize/#less-variables
-@import "./utilities/variables_thunibib";
+@import "./utilities/variables";
 
 
 // necessary import (parent)
