--- a/src/main/resources/META-INF/resources/scss/base/_general.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_general.scss
@@ -1,11 +1,6 @@
 body {
   min-height: 100vh;
-}
-
-@media (min-width: 768px) {
-  body {
-      background: url('/images/body_background.png') right 13rem no-repeat fixed #fff;
-  }
+  font-family: 'Roboto',Arial,sans-serif;
 }
 
 @media only screen and (min-width : 1200px) {
@@ -13,9 +8,8 @@ body {
 }
 
 .card {
-    border: none !important;
-    font-size: 15px;
-    background: rgba(255,255,255,0);
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .1rem;
 }
 
 .card.mb-3 {
@@ -28,21 +22,12 @@ body {
 
 .card-body {
   padding: 10px 15px;
-  background: rgba(255,255,255,0) !important;
 }
 
-.card-body h3 {
-  font-size: 23px;
-  font-weight: 400;
-  font-family: 'Roboto Condensed',Arial,sans-serif;
-  letter-spacing: 0.02em;
-  color: #002350;
+.card-header, .card-footer {
+  background-color: $color-light-blue;
 }
 
-h3#seitentitel {
-  font-family: "Palatino Linotype", "AmiriRegular", "BookAntiqua", Georgia, serif;
-}
-
-.mycore-list-item {
-  background-color: transparent;
+a {
+  color: $color-dark-blue;
 }
