--- a/src/main/resources/META-INF/resources/scss/base/_headline.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_headline.scss
@@ -1,13 +1,10 @@
 
 $bg-color-headline: #1d60bd;
 #headlineWrapper {
-  background-color: $bg-color-headline;
+  background-color: $color-dark-blue;
   padding: 25px 0px;
   h3 {
     padding: 6px 0px 0px 0px;
-    color: white;
-    background: url('/images/meta_headline_white.svg') no-repeat left top;
-    font-size: 27px;
-    font-weight: 400;
+    color: black;
   }
 }
