some module refacturing and minor layout fixes

--- a/src/main/resources/META-INF/resources/scss/base/_header.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_header.scss
@@ -50,9 +50,8 @@ li.nav-item.active {
 }
 
 #wordmark {
-  background: url('../../../ubo_hagen_logo.png');
-  height: 60px;
-  width: 283px;
+  background: url("../../../images/ubo_hagen_logo.png") no-repeat;
+  height: 50px;
 }
 
 i.fas.fa-lg.fa-bars {
