--- a/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
+++ b/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
@@ -3,7 +3,7 @@ $body-bg: white;
 $bg-color-breadcrumb: #174488;
 
 $color-light-blue: #2a2a94;
-$color-dark-blue: #024975;
+$color-dark-blue:  #2a2a94;
 
 $badge-font-weight: normal;
 
