--- a/src/main/resources/META-INF/resources/scss/base/_headline.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_headline.scss
@@ -1,7 +1,7 @@
 
 $bg-color-headline: #1d60bd;
 #headlineWrapper {
-  background-color: $color-dark-blue;
+  background-color: #ddd;
   padding: 25px 0px;
   h3 {
     padding: 6px 0px 0px 0px;
