--- a/src/main/resources/META-INF/resources/scss/base/_cards.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_cards.scss
@@ -1,20 +1,26 @@
-/*  header settings
- *  - settings for the page header
+/*  cards settings
+ *  - all about cards and card design
  */
 
 // Extra large devices (large desktops)
 // set the defaults for all responsive levels here
 // no (xl) media query necessary (desktop first)
 
-  header {
-    margin-top: 20px;
-    margin-bottom: 20px;
+  .card-header {
+    border: none; // no need for a second border
+    background-color: transparent; // no background for card header
   }
-
-  #wordmark {
-    background: url("../../../images/ubo_hagen_logo.png") no-repeat;
-    height: 50px;
-    background-size: contain;
+  .card-body {
+    padding: 10px 15px; // just to much space
+    h3 {
+      font-size: 1.2rem; // reduce size for facett boxes
+    }
+    &.bibentry {
+      padding-left: 20px; // align text with badges and buttons
+    }
+  }
+  .card-footer {
+    border: none; // no need for a second border
   }
 
 // Large devices (desktops) and below: <= 1200px
