--- a/src/main/resources/META-INF/resources/scss/base/_footer.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_footer.scss
@@ -1,53 +1,68 @@
-footer {
-    background-color: $color-dark-blue;
+/*  footer settings
+ *  - all about the footer
+ */
+
+// Extra large devices (large desktops)
+// set the defaults for all responsive levels here
+// no (xl) media query necessary (desktop first)
+
+  footer {
+    background-color: $primary;
     color: #fff;
     width: 100%;
     height: 150px;
     z-index: 100;
     bottom: 0;
     margin-top: auto;
-}
+  }
 
-footer .container {
+  footer .container {
     margin-top: auto;
-}
+  }
 
-footer .info {
+  footer .info {
     color: rgba(255,255,255,.4);
     height: 138px;
     padding-bottom: 30px;
     line-height: 48px;
     font-family: 'Roboto Condensed',Arial,sans-serif;
-}
+  }
 
-.imprintlinewrapper a {
+  .imprintlinewrapper a {
     color: white;
     font-size: 13px;
     letter-spacing: 0.02em;
     margin-right: 32px;
-}
-
-@include media-breakpoint-up(sm) {
-  footer .ribbon {
-    max-width: 540px;
   }
-}
 
-@include media-breakpoint-up(md) {
-  footer .ribbon {
-    max-width: 720px;
-  }
-}
-
-@include media-breakpoint-up(lg) {
-  footer .ribbon {
-    max-width: 960px;
-  }
-}
-
-@include media-breakpoint-up(xl) {
+// Large devices (desktops) and below: <= 1200px
+@include media-breakpoint-down(lg) {
+  // add/overwrite styles for responsive level lg and lower
   footer .ribbon {
     max-width: 1140px;
   }
 }
 
+// Medium devices (tablets) and below: <= 992px
+@include media-breakpoint-down(md) {
+  // add/overwrite styles for responsive level md and lower
+  footer .ribbon {
+    max-width: 960px;
+  }
+}
+
+// Small devices (landscape phones) and below: <= 768px
+@include media-breakpoint-down(sm) {
+  // add/overwrite styles for responsive level sm and lower
+  footer .ribbon {
+    max-width: 720px;
+  }
+}
+
+// Extra small devices (portrait phones): <= 576px
+@include media-breakpoint-down(xs) {
+  // add/overwrite styles for responsive level xs
+  footer .ribbon {
+    max-width: 540px;
+  }
+}
