--- a/src/main/resources/META-INF/resources/scss/base/_general.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_general.scss
@@ -1,33 +1,71 @@
-body {
-  min-height: 100vh;
-  font-family: 'Roboto',Arial,sans-serif;
+/*  general settings
+ *  - common stuff with no specific sass file
+ */
+
+// Extra large devices (large desktops)
+// set the defaults for all responsive levels here
+// no (xl) media query necessary (desktop first)
+
+  body {
+    min-height: 100vh;
+  }
+  //.container { width: 1140px; }
+
+  #headlineWrapper {
+    background-color: #ddd;
+    padding: 25px 0px;
+    h3 {
+      padding: 6px 0px 0px 0px;
+      color: black;
+    }
+  }
+  .row .col hr {
+    border-top: 0;
+  }
+  .nameIdentifier {
+    @extend .badge, .badge-primary;
+    a {
+      color: white;
+      text-transform: capitalize;
+    }
+    vertical-align: top;
+    margin-right: 0.25rem;
+    background-color: #ddd;
+  }
+
+  .nameIdentifier:first-child {
+    margin-left: 0.25rem;
+  }
+
+  .nameIdentifier:last-child {
+    margin-right: 0rem;
+  }
+
+  // more space after pipe in facett entry
+  .mycore-facet-count {
+    margin-right: 0.25rem;
+  }
+  .mycore-facet-exclude,
+  .mycore-facet-remove {
+    color: $hagenRButton;
+  }
+
+// Large devices (desktops) and below: <= 1200px
+@include media-breakpoint-down(lg) {
+  // add/overwrite styles for responsive level lg and lower
 }
 
-@media only screen and (min-width : 1200px) {
-    .container { width: 1140px; }
+// Medium devices (tablets) and below: <= 992px
+@include media-breakpoint-down(md) {
+  // add/overwrite styles for responsive level md and lower
 }
 
-.card {
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .1rem;
+// Small devices (landscape phones) and below: <= 768px
+@include media-breakpoint-down(sm) {
+  // add/overwrite styles for responsive level sm and lower
 }
 
-.card.mb-3 {
-  margin-bottom: 1.5rem !important;
-}
-
-.card.mb-2 {
-  margin-bottom: 1.5rem !important;
-}
-
-.card-body {
-  padding: 10px 15px;
-}
-
-.card-header, .card-footer {
-  background-color: $color-light-blue;
-}
-
-a {
-  color: $color-dark-blue;
+// Extra small devices (portrait phones): <= 576px
+@include media-breakpoint-down(xs) {
+  // add/overwrite styles for responsive level xs
 }
