--- a/src/main/resources/META-INF/resources/scss/bootstrap-ubo.scss
+++ b/src/main/resources/META-INF/resources/scss/bootstrap-ubo.scss
@@ -1,30 +1,14 @@
-// override bootstrap sass variables specified here:
-// http://getbootstrap.com/customize/#less-variables
-@import "./utilities/variables";
+@import "./utilities/variables";  // project variables
 
+@import "bootstrap-ubo-base";     // core layout (variables and base settings)
 
-// necessary import (parent)
-@import "bootstrap-ubo-base";
+@import "./base/general";         // common settings
 
+@import "./base/header";          // page header
+@import "./base/navigation";      // menus and links
+@import "./base/footer";          // page footer
 
-// thuunibib CSS
-// Unspecific/general
-@import "./base/general";
-
-// Header-Specific
-@import "./base/header";
-
-// Breadcrumb-Specific (including basket)
-@import "./base/breadcrumb";
-
-// Navigation-Specific
-@import "./base/navigation";
-
-// Headline-Specific
-@import "./base/headline";
-
-// Bodywrapper-Specific (Main content container)
-@import "./base/maincontent";
-
-// Footer-Specific
-@import "./base/footer";
+@import "./base/typo";            // all about typography
+@import "./base/buttons";         // button settings
+@import "./base/forms";           // forms but not buttons
+@import "./base/cards";           // cards
