DMS-165 removes background from headline and changes font

--- a/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
+++ b/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
@@ -14,6 +14,7 @@ $hagenRInfoBack:      #dce4ec;
 $hagenRButton:        #9d9d9d;
 $hagenRButtonHover:   #848484;
 $hagenRButtonBorder:  #7e7e7e;
+$hagenText:           #4d4d4d;
 // project variables
 
 
