--- a/src/main/resources/META-INF/resources/scss/base/_header.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_header.scss
@@ -10,11 +10,16 @@
     margin-top: 20px;
     margin-bottom: 20px;
   }
-
   #wordmark {
     background: url("../../../images/ubo_hagen_logo.png") no-repeat;
     height: 50px;
     background-size: contain;
+  }
+  #headlineWrapper {
+    padding-top: 60px;
+    h3 {
+      font-size: 26px;
+    }
   }
 
 // Large devices (desktops) and below: <= 1200px
