--- a/src/main/resources/META-INF/resources/scss/base/_typo.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_typo.scss
@@ -8,7 +8,8 @@
 // no (xl) media query necessary (desktop first)
 
 body {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+  color: $hagenText;
 }
 
 h1, .h1 { font-size: 2rem; }
