rename ubo core layout sass

--- a/src/main/resources/META-INF/resources/scss/bootstrap-ubo.scss
+++ b/src/main/resources/META-INF/resources/scss/bootstrap-ubo.scss
@@ -1,6 +1,6 @@
 @import "./utilities/variables";  // project variables
 
-@import "bootstrap-ubo-base";     // core layout (variables and base settings)
+@import "ubo";     // core layout (variables and base settings)
 
 @import "./base/general";         // common settings
 
