layout fix (move logo to center)

--- a/src/main/resources/META-INF/resources/scss/base/_footer.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_footer.scss
@@ -43,6 +43,10 @@
     padding-right: 0;
     padding-left: 0;
   }
+  
+  .imprintlinewrapper img {
+    vertical-align: text-top;
+  }
 
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
