--- a/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
+++ b/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
@@ -2,7 +2,9 @@
 $hagenLink:           #4645A4;
 $hagenVisited:        #6B2906;
 $hagenGray:           #e8e8ea;
-$hagenBlue:           #2a2a94;
+$hagenOldBlue:        #2a2a94;
+$hagenBlue:           #004c97;
+$hagenBlueHover:      #2f6daa;
 $hagenYellow:         rgb(208,168,72);
 
 // reposis
