--- a/src/main/resources/META-INF/resources/scss/base/_footer.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_footer.scss
@@ -10,10 +10,10 @@
     background-color: $primary;
     color: #fff;
     width: 100%;
-    height: 150px;
     z-index: 100;
     bottom: 0;
     margin-top: auto;
+    padding-top: 1rem;
   }
 
   footer .container {
@@ -22,9 +22,7 @@
 
   footer .info {
     color: rgba(255,255,255,.4);
-    height: 138px;
     padding-bottom: 30px;
-    line-height: 48px;
     font-family: 'Roboto Condensed',Arial,sans-serif;
   }
 
@@ -32,20 +30,24 @@
     color: white;
     font-size: 13px;
     letter-spacing: 0.02em;
-    margin-right: 32px;
   }
-  
+
   .imprintlinewrapper a.nav-link:hover {
     color:white;
   }
-  
+
   .imprintlinewrapper .navbar-nav .nav-link {
     padding-right: 0;
     padding-left: 0;
+    margin-right: 2rem;
   }
-  
+
   .imprintlinewrapper img {
     vertical-align: text-top;
+  }
+
+  #powered_by {
+    padding-right: 15px;
   }
 
 // Large devices (desktops) and below: <= 1200px
@@ -54,6 +56,9 @@
   footer .ribbon {
     max-width: 1140px;
   }
+  .imprintlinewrapper .navbar-nav .nav-link {
+    margin-right: 0;
+  }
 }
 
 // Medium devices (tablets) and below: <= 992px
@@ -61,6 +66,9 @@
   // add/overwrite styles for responsive level md and lower
   footer .ribbon {
     max-width: 960px;
+  }
+  footer .navbar-expand .navbar-nav {
+    flex-direction: column;
   }
 }
 
