--- a/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
+++ b/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
@@ -7,6 +7,11 @@ $hagenBlue:           #004c97;
 $hagenBlueHover:      #2f6daa;
 $hagenYellow:         rgb(208,168,72);
 
+$hagenBlueLight:  #6791be;  // info back
+$hagenGrayLight:  #e4e4e4;  // card back
+$hagenGrayMedium: #ddd;     // footer back
+$hagenGrayDark:   #b1b3b3;  // ?
+
 // reposis
 $hagenRHover:         #6969d4;
 $hagenRLink:          #494999;
@@ -17,6 +22,7 @@ $hagenRButton:        #9d9d9d;
 $hagenRButtonHover:   #848484;
 $hagenRButtonBorder:  #7e7e7e;
 $hagenText:           #4d4d4d;
+
 // project variables
 
 
