--- a/src/main/resources/META-INF/resources/scss/base/_footer.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_footer.scss
@@ -7,62 +7,57 @@
 // no (xl) media query necessary (desktop first)
 
   footer {
-    background-color: $primary;
-    color: #fff;
-    width: 100%;
-    z-index: 100;
-    bottom: 0;
-    margin-top: auto;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
+    margin-top: 50px;
+    .hagen-footer-menu {
+      padding-top: 1.875rem;
+      padding-bottom: 1rem;
+      background-color: $hagenGrayLight;
+    }
 
-  .hgn-footer-menu {
-    font-family: 'Roboto Condensed',Arial,sans-serif;
-    .navbar {
-      padding: 0;
+    .hagen-footer-logo {
+      padding-top: .5rem;
+      padding-bottom: .5rem;
+      background-color: $hagenBlue;
+    }
+
+    h4 {
+      color: $body-color;
+      text-transform: uppercase;
+      font-size: 1.125rem;
     }
     a {
-      color: white;
-      font-size: 0.8125rem;
-      letter-spacing: 0.02em;
-    }
-    .navbar-nav .nav-link {
-      padding-right: 0;
-      padding-left: 0;
-      margin-right: 2rem;
+      color: $body-color;
+      font-size: 0.875rem;
       &:hover {
-        color:white;
+        color: $body-color;
       }
     }
+    .internal_links {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      .nav-link {
+        padding: 0.2rem 0;
+      }
+    }
+
   }
 
   #powered_by {
-    a {
-      display: block;
-      text-align: right;
-      img {
-        height: 50px;
-      }
-    }
+    text-align: center;
+    background-color: #080F1F;
+    border-top: 1px solid #000;
+    padding: 2em 0px;
   }
 
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
   // add/overwrite styles for responsive level lg and lower
-  .hgn-footer-menu {
-    .navbar-nav .nav-link {
-      margin-right: 0.5rem;
-    }
-  }
 }
 
 // Medium devices (tablets) and below: <= 992px
 @include media-breakpoint-down(md) {
   // add/overwrite styles for responsive level md and lower
-  footer .navbar-expand .navbar-nav {
-    flex-direction: column;
-  }
 }
 
 // Small devices (landscape phones) and below: <= 768px
@@ -73,7 +68,4 @@
 // Extra small devices (portrait phones): <= 576px
 @include media-breakpoint-down(xs) {
   // add/overwrite styles for responsive level xs
-  #powered_by {
-    margin-top: 1rem;
-  }
 }
