--- a/src/main/resources/META-INF/resources/scss/base/_navigation.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_navigation.scss
@@ -8,11 +8,14 @@
 
 // main nav
   #navigationWrapper {
-    font-family: 'Roboto Condensed', Arial, sans-serif;
+    font-family: Roboto, Arial, sans-serif;
     background-color: $primary;
     .nav-item {
       .nav-link {
         color: white;
+        font-size: 1.125rem;
+        font-weight: 500;
+        text-transform: uppercase;
       }
       &.active {
         .nav-link {
@@ -83,7 +86,7 @@
       list-style: none;
       border-radius: 0;
       font-size: 14px;
-      font-family: 'Roboto Condensed', Arial, sans-serif;
+      font-family: Roboto, Arial, sans-serif;
       background-color: $white;
   }
   .breadcrumb-item + .breadcrumb-item::before {
@@ -101,7 +104,7 @@
     a {
       color: $primary;
       font-size: 14px;
-      font-family: 'Roboto Condensed', Arial, sans-serif;
+      font-family: Roboto, Arial, sans-serif;
     }
     padding: 0.75rem 0;
   }
