--- a/src/main/resources/META-INF/resources/scss/base/_typo.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_typo.scss
@@ -8,7 +8,7 @@
 // no (xl) media query necessary (desktop first)
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
   color: $hagenText;
 }
 
