--- a/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
+++ b/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
@@ -37,3 +37,19 @@ $badge-font-weight:   normal;
 $theme-colors: (
   alternative: $secondary
 );
+
+// OpenAccess colors based on open access monitor colors
+$oa:              #f08112;
+$oa-closed:       #8f989d;
+$oa-green:        #0b610b;
+$oa-gold:         #ffd966;
+$oa-platin:       #22e4e4;
+$oa-hybrid:       #4472c4;
+$oa-bronze:       #cd7f32;
+$oa-embargo:      #81c14b;
+$oa-unvalidated:  #9467bd;
+
+$oa-default-text-light: white;
+$oa-default-text-dark:  black;
+$oa-green-text:       $oa-default-text-light;
+
