--- a/src/main/resources/META-INF/resources/scss/base/_general.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_general.scss
@@ -30,10 +30,32 @@
     margin-right: 0rem;
   }
 
-  // more space after pipe in facett entry
-  .mycore-facet-count {
-    margin-right: 0.25rem;
+.counter-length {
+  &-1 {
+    .mycore-facet-count { width: 25px; }
+    .mycore-facet-value { width: 190px; }
   }
+  &-2 {
+    .mycore-facet-count { width: 30px; }
+    .mycore-facet-value { width: 185px; }
+  }
+  &-3 {
+    .mycore-facet-count { width: 40px; }
+    .mycore-facet-value { width: 175px; }
+  }
+  &-4 {
+    .mycore-facet-count { width: 55px; }
+    .mycore-facet-value { width: 160px; }
+  }
+  &-5 {
+    .mycore-facet-count { width: 65px; }
+    .mycore-facet-value { width: 150px; }
+  }
+  &-6 {
+    .mycore-facet-count { width: 75px; }
+    .mycore-facet-value { width: 140px; }
+  }
+}
   .mycore-facet-exclude,
   .mycore-facet-remove {
     color: $hagenRButton;
